# FYPEngine

./: CMakeLists.txt  README.md
FYP2025/: FYP2025.sln  FYP2025.vcxproj
FYP2025/x64/Debug/: FYP2025.exe.recipe  FYP2025.ilk  FYP2025.vcxproj.FileListAbsolute.txt  vc143.idb
FYP2025/x64/Debug/FYP2025.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FYP2025.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/FYPEngine/: Attribute.h  Background.h  CollisionBox.cpp  CollisionBox.h  Component.cpp  Component.h  Core.cpp  Core.h  EngineGUI.cpp  EngineGUI.h  EngineGUIAttrib.cpp  EngineGUIAttrib.h  EngineGUIButton.cpp  EngineGUIButton.h  EngineGUIContent.cpp  EngineGUIContent.h  EngineGUIElement.cpp  EngineGUIElement.h  EngineGUIFrame.cpp  EngineGUIFrame.h  EngineGUIObject.cpp  EngineGUIObject.h  EngineGUITexture.cpp  EngineGUITexture.h  Entity.cpp  Entity.h  FYPEngine.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  ObjectController.cpp  ObjectController.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/UI/: main.cpp
